[project]
name = "final-project-mvp"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "seaborn (>=0.13.2,<0.14.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "streamlit (>=1.45.1,<2.0.0)",
    "altair (>=5.5.0,<6.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
